@@ -25,17 +25,17 @@ public class LoginDetailService implements UserDetailsService {
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         User user = userRepository.findByEmailWithRoles(username.strip()).orElseThrow(() -> new EntityNotFoundException("해당하는 이메일이 존재하지 않습니다."));
 
-        if(!user.getIsUse()) {
+        if(Boolean.FALSE.equals(user.getIsUse())) {
             throw new EntityNotFoundException("사용 중지된 사용자 입니다. 관리자에게 문의하십시오.");
         }
 
-        if(user.getIsLock()) {
+        if(Boolean.TRUE.equals(user.getIsLock())) {
             throw new EntityNotFoundException("잠긴 사용자 입니다. 관리자에게 문의하십시오.");
         }
 
         List<SimpleGrantedAuthority> authorityList = user.getUserRoleList().stream()
                 .map(u -> new SimpleGrantedAuthority(u.getRole().getName()))
-                .collect(Collectors.toList());
+                .toList();
 
         return new UserInfo(user.getEmail(), user.getName(), user.getPassword(), authorityList);
     }
